--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@vercel/node": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "vercel": "^39.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
