--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/swagger": "^8.0.0",
     "@nestjs/typeorm": "^10.0.2",
-    "@vercel/node": "^5.0.0",
+    "@nestjs/websockets": "^10.4.15",
+    "@vercel/node": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -37,7 +39,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "streamifier": "^0.1.1",
-    "vercel": "^39.2.2"
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
